--- a/style.css
+++ b/style.css
@@ -5,28 +5,28 @@ body {
   font-family: Lato, sans-serif;
 }
 
-.aaa {
+.app-header {
   width: 500px;
   margin: 0 auto;
   display: block;
   text-align: right;
 }
 
-.aaa img {
+.app-header img {
   width: 100%;
 }
 
-.aaa .more_inf {
+.app-header .more_inf {
   font-family: fantasy, cursive;
 }
 
 @media (max-width: 768px) {
-  .aaa {
+  .app-header {
     text-align: center;
   }
 }
 
-.centered-main-page-element {
+.app-content {
   display: block;
   width: 500px;
   margin: 0 auto 0;
